checkboxes and slider

--- a/index.html
+++ b/index.html
@@ -60,11 +60,39 @@
                 </div>
 
                 <div class="Main__coffe-settings">
-                    <input type="checkbox" id="">
-                    <input type="checkbox" id="">
-                    <input type="radio">
-                    <input type="text">
-                    <input type="text">
+                    <h4 class="main-title">Your own recipe</h4>
+
+                    <div class="coffe-type-wrapper">
+                        <label class="label">Arabica</label>
+                        <input class="chb" type="checkbox" id="arabica">
+                        <label for="arabica"></label>
+                    </div>
+
+                    <div class="coffe-type-wrapper">
+                        <label class="label">Robusta</label>
+                        <input class="chb" type="checkbox" id="robusta">
+                        <label for="robusta"></label>
+                    </div>
+
+                    <div class="coffe-type-wrapper">
+                        <label class="label">Liberica</label>
+                        <input class="chb" type="checkbox" id="liberica">
+                        <label for="liberica"></label>
+                    </div>
+
+                    <div class="coffe-type-wrapper">
+                        <label class="label">Mauritiana</label>
+                        <input class="chb" type="checkbox" id="Mauritiana">
+                        <label for="Mauritiana"></label>
+                    </div>
+
+                    <div class="slider-container">
+                        <span class="first-select-chb main-text">coffe1</span>
+                        <input type="range" min="1" max="100" value="50" class="slider" id="slider">
+                        <span class="second-select-chb main-text">mauritania</span>
+                    </div>
+                    <h5 class="main-text" id="percents"></h5>
+
                 </div>
             </main>
 
