--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Grounds Logic</title>
     <link rel="icon" href="./img/coffee-logic.png">
-    <link rel="stylesheet" href="./index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.js"
-        type="text/javascript"></script>
+        type="text/javascript"></script> -->
 </head>
 
 <body>
@@ -100,7 +99,7 @@
         </div>
     </div>
 
-    <script src="./index.js"></script>
+    <!-- <script src="./index.js"></script> -->
 </body>
 
 </html>
